# goblinmode

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  Justfile  README.md  REUSE.toml
.claude/skills/cargo-insta/: SKILL.md
.claude/skills/forgejo-fj/: SKILL.md
.config/: coverage-baseline-darwin.json  coverage-baseline-linux.json  coverage-baseline.json  goblinmode.toml
.github/workflows/: ci.yml  docs.yml
docs/: .gitignore  book.toml  watchdog-launchd.md
docs/src/: SUMMARY.md  configuration.md  getting-started.md  introduction.md  watchdog.md
scripts/: check_coverage.py
src/: cloud_init.rs  config.rs  hetzner.rs  http_client.rs  main.rs  packages.rs  project.rs  project_config.rs  ssh.rs  state.rs  tailscale.rs  tracing_setup.rs
src/cmd/: down.rs  mod.rs  mosh.rs  pause.rs  prune.rs  status.rs  up.rs  watchdog.rs  zed.rs
src/cmd/snapshots/: gob__cmd__up__tests__cloud_init_basic.snap  gob__cmd__up__tests__cloud_init_full.snap  gob__cmd__up__tests__cloud_init_with_agents.snap  gob__cmd__up__tests__cloud_init_with_packages.snap  gob__cmd__up__tests__cloud_init_with_rust.snap
src/snapshots/: gob__cloud_init__tests__cloud_init_with_npm_packages.snap  gob__cloud_init__tests__cloud_init_with_python.snap  gob__cloud_init__tests__cloud_init_with_rust.snap
