[package]
name = "goblinmode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gob"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[dev-dependencies]
insta = "1"
tempfile = "3"
