[package]
name = "goblinmode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gob"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dirs = "6"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
